# ATTPCode

./: .gitignore  Makefile  Makefile.in  README.md  avl.h  basic_defs.h  conf.cpp  conf.h  config.h.in  config_list.h  configure  configure.ac  configure~  create_fe_data.sh  dct_example.cpp  driver.cpp  exact_query.cpp  exact_query.h  fd.cpp  fd.h  frequentDir.py  gen_deps.sh  hashtable.h  heavyhitters.cpp  heavyhitters.h  lapack_wrapper.c  min_heap.h  misra_gries.cpp  misra_gries.h  norm_sampling.cpp  norm_sampling.h  norm_sampling_wr.cpp  pams.cpp  pams.h  pcm.cpp  pcm.h  pla.cpp  pla.h  pmmg.cpp  pmmg.h  (+24 more)
configs/: generate-fe-key-set.conf  run-exact-hh-bitp.conf  scalability-test-client-id.conf  test-client-id-attp.conf  test-client-id-bitp-fe.conf  test-client-id-bitp.conf  test-client-id-fe.conf  test-client-id.conf  test-client-ip.conf  test-matrix-big.conf  test-matrix-medium.conf  test-matrix-sketch-with-analytic-error.conf  test-matrix-sketch.conf  test-matrix-small.conf  test-object-id-attp.conf  test-object-id-bitp.conf  test.conf
configs/examples/: sample-config.conf  test-object-id-bitp.conf  test-object-id.conf
configs/old/: new-test-client-id.conf  run-exact-hh.conf  test-client-id-bitp-fe.conf  test-client-id.conf  test-client-ip.conf  test.conf
data/: README  README.md  README.old  sample-world-cup.txt
data_proc/: .gitignore  Makefile  gen_mat_data.sh
data_proc/world-cup/: Makefile  create_scalability_test_client_id.cpp  prepare_data.sh  (+1 more)
misc/: eigen_example.cpp  get_mat_errs.sh  run_all.sh  run_list.txt  svd_sample.cpp  test.conf
plot/: HH_ATTP_clientid.ipynb  HH_ATTP_objectid.ipynb  HH_BITP_clientid.ipynb  HH_BITP_objectid.ipynb  HH_plot.ipynb  MAT_ATTP_big.ipynb  MAT_ATTP_medium.ipynb  MAT_ATTP_small.ipynb  Scalability_test_client_id_ATTP.ipynb  attp_exp.xlsx  download.sh  format_param.py
repro_readme/: repro_readme.tex
vertica/: .gitignore  Makefile  cid_hh.sql  load_client_id.sql  load_object_id.sql  odbc.ini  oid_hh.sql  run_vertica.sh  scalability_test_client_id.cpp  setup_vertica.sh  vertica.ini
(+164 files in other folders)
